# SP_PCL

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pcd_read.cpp
pcd_files/: MODEL_cup_1_25xbigger.pcd  MODEL_cup_deformed5.pcd  MODEL_cup_deformed6.pcd  MODEL_cup_deformed_noise.pcd  MODEL_cup_pink.pcd  MODEL_cup_resized.pcd  MODEL_cup_smaller.pcd  SCENE_plain.pcd  SCENE_table_with_mugs.pcd
pcd_valve_resized/: MODEL_valve_remesh.pcd
pgm_files/: 20190902_093746_012_depth.pgm  20190902_093746_054_depth.pgm  20190902_093746_116_depth.pgm  20190902_093746_266_depth.pgm  20190902_093746_393_depth.pgm  20190902_093746_454_depth.pgm  20190902_093746_526_depth.pgm  20190902_093746_586_depth.pgm  20190902_093746_659_depth.pgm  20190902_093746_721_depth.pgm  20190902_093746_792_depth.pgm  20190902_093746_854_depth.pgm  20190902_093746_926_depth.pgm  20190902_093746_986_depth.pgm  20190902_093747_053_depth.pgm  20190902_093747_120_depth.pgm  20190902_093747_250_depth.pgm  20190902_093747_325_depth.pgm  20190902_093747_380_depth.pgm  20190902_093747_451_depth.pgm  20190902_093747_525_depth.pgm  20190902_093747_582_depth.pgm  20190902_093747_654_depth.pgm  20190902_093747_717_depth.pgm  20190902_093747_783_depth.pgm  20190902_093747_914_depth.pgm  20190902_093748_046_depth.pgm  20190902_093748_127_depth.pgm  20190902_093748_320_depth.pgm  20190902_093748_520_depth.pgm  20190902_093748_648_depth.pgm  20190902_093748_724_depth.pgm  20190902_093748_792_depth.pgm  20190902_093748_853_depth.pgm  20190902_093748_924_depth.pgm  20190902_093748_984_depth.pgm  20190902_093749_122_depth.pgm  20190902_093749_259_depth.pgm  20190902_093749_324_depth.pgm  20190902_093749_389_depth.pgm  (+725 more)
src/: CMakeCache.txt  Clouder.cpp  Clouder.h  Makefile  Matcher.cpp  Matcher.h  PGMbReader.cpp  main  (+4 more)
